--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fullstack-adventure",
   "version": "0.1.0",
   "description": "Fullstack fun",
-  "main": "src/index.html",
+  "main": "src/backend/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
