--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "fullstack-adventure",
   "version": "0.1.0",
   "description": "Fullstack fun",
-  "main": "src/backend/index.html",
+  "main": "src/backend/index.js",
   "scripts": {
+    "dev": "nodemon ./src/backend/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/Hilman-Azfar/fullstack-adventure/issues"
   },
-  "homepage": "https://github.com/Hilman-Azfar/fullstack-adventure#readme"
+  "homepage": "https://github.com/Hilman-Azfar/fullstack-adventure#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
+  }
 }
