--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/backend/index.js",
   "scripts": {
     "dev": "nodemon ./src/backend/index.js",
+    "build": "cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
